# pineastudio

./: .gitignore  README.md  pyproject.toml
docs/: design.md  startup-guide.md  think.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  OrbVisualizer.tsx
frontend/src/pages/: Assistant.tsx  Chat.tsx  Memory.tsx  Models.tsx  Omni.tsx  Realtime.tsx  Settings.tsx  Setup.tsx  System.tsx  Video.tsx
scripts/: start-pineastudio.sh
src/pineastudio/: __init__.py  config.py  db.py  main.py  schemas.py
src/pineastudio/routers/: backends.py  conversations.py  hub.py  memory.py  models.py  omni.py  proxy.py  realtime.py  settings.py  setup.py  system.py  video.py
src/pineastudio/services/: asr.py  backend_manager.py  downloader.py  hardware.py  memory_manager.py  memory_tool.py  omni_session.py  preferences.py  summarizer.py  tts_service.py  video_gen.py
src/pineastudio/services/backends/: base.py  llama_omni.py  llama_server.py  ollama.py  openai_compat.py
